# hmi

./: .gitignore  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml  2-feature-request.yaml
.github/workflows/: format.yml  lint.yml  test.yml
app/: .env.example  eslint.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/config/: main.yaml
app/src/: main.tsx  theme.ts  vite-env.d.ts
app/src/components/: App.tsx  Console.tsx  StatusIcon.tsx
app/src/components/Console/: Console.tsx  ConsoleFilters.tsx
app/src/components/Dashboard/: CurrentTask.tsx  Dashboard.tsx  DashboardCard.tsx  NodeHealth.tsx  PageDots.tsx  RosBar.tsx  RosCard.tsx  RosColor.tsx  RunningTime.tsx  RunningTimeClock.tsx  TaskHistoryDialog.tsx
app/src/components/NavBar/: EStop.tsx  NavBar.tsx  StartButton.tsx  StatusSummary.tsx
app/src/components/NavBar/__tests__/: EStop.test.tsx  StartButton.test.tsx
app/src/components/NodeManager/: NodeItem.tsx  NodeManager.tsx
app/src/components/NodeManager/__tests__/: NodeItem.test.tsx  NodeManager.test.tsx
app/src/components/Providers/: ROSProvider.tsx
app/src/components/Providers/__tests__/: ExposeROSProvider.tsx  ROSProvider.test.tsx
app/src/css/: App.css  index.css
app/src/types/: config.ts  console.ts  dashboard.ts  navbar.ts  nodeManager.ts  rosProvider.ts  status.ts
app/src/util/: config.ts  status.ts  util.ts
app/src/util/__tests__/: status.test.ts  util.test.ts
node_info/src/node_info/: package.xml
node_info/src/node_info/node_info/: main_node_info.py
react/public/: index.html  manifest.json
ros/src/dashboard_api/: package.xml  setup.cfg  setup.py
ros/src/dashboard_api/dashboard_api/: __init__.py  dashboard_api.py
ros/src/dashboard_interface/: CMakeLists.txt  package.xml
ros/src/dashboard_interface/msg/: Dashboard.msg
ros/src/hmi_com/: package.xml  setup.cfg  setup.py
ros/src/hmi_com/hmi_com/: hmi_com_main.py
ros/src/hmi_com/node_info/: hmi_com.py
ros/src/hmi_com_interface/: CMakeLists.txt  package.xml
ros/src/node_info/: setup.cfg  setup.py
ros/src/node_info/node_info/: main_node_info.py
